Index.html erweitert

--- a/Frontend/003 - UIUX/116/index.html
+++ b/Frontend/003 - UIUX/116/index.html
@@ -25,6 +25,11 @@
           <td>25 €</td>
           <td>Nicht verfügbar</td>
         </tr>
+        <tr>
+          <td>Produkt C</td>
+          <td>99 €</td>
+          <td>noch 5 auf Lager</td>
+        </tr>
         <!-- Weitere Zeilen -->
       </tbody>
     </table>
