index.html geändert

--- a/Frontend/003 - UIUX/123/index.html
+++ b/Frontend/003 - UIUX/123/index.html
@@ -10,7 +10,7 @@
 git
 <h1>Hello World</h1>
 <p>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.Veritas numquam est quaerenda; sapientia enim cum voluptate coniuncta est.fugiat enim quae corporis sunt, omnis voluptas assumenda est, omnis dolor repellendus. Regularly we provide a variety of services to help you achieve your goals. inspiration comes from many sources, including nature, art, and everyday experiences.
+   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia ordio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.Veritas numquam est quaerenda; sapientia enim cum voluptate coniuncta est.fugiat enim quae corporis sunt, omnis voluptas assumenda est, omnis dolor repellendus. Regularly we provide a variety of services to help you achieve your goals. inspiration comes from many sources, including nature, art, and everyday experiences.
 </p>
 </body>
 </html>
