Containerklasse und responsive Fonts

--- a/HCM-Portfolio/index.html
+++ b/HCM-Portfolio/index.html
@@ -13,7 +13,7 @@
    <div class="navbar-middle">Dentist</div>
    <div class="navbar-right">Social Icons</div>
 </header>
-<section class="hero">
+<section class="hero container">
    <div class="text-container">
       <h1>Hero Section</h1>
    </div>
