Farben von SVGs ändern

--- a/HCM-Portfolio/index.html
+++ b/HCM-Portfolio/index.html
@@ -11,7 +11,10 @@
    <nav class="navbar"></nav>
    <div class="navbar-left">Jonas</div>
    <div class="navbar-middle">Dentist</div>
-   <div class="navbar-right">Social Icons</div>
+   <div class="navbar-right">
+      <img src="./src/public/instagram.svg" alt="To Instagram"/>
+      <img src="./src/public/tiktok.svg" alt="To TikTok"/>
+   </div>
 </header>
 <section class="hero container">
    <div class="text-container">
