Die Navbar eingerichtet

--- a/HCM-Portfolio/index.html
+++ b/HCM-Portfolio/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 <header>
-   <nav class="navbar"></nav>
-   <div class="navbar-left">Jonas</div>
-   <div class="navbar-middle">Dentist</div>
-   <div class="navbar-right">
-      <img src="./src/public/instagram.svg" alt="To Instagram"/>
-      <img src="./src/public/tiktok.svg" alt="To TikTok"/>
-   </div>
+   <nav class="navbar">
+      <div class="navbar-left"><h6>JONAS</h6> </div>
+      <div class="navbar-middle"><h6>DENTIST</h6> </div>
+      <div class="navbar-right">
+         <img class="svg" src="./src/public/instagram.svg" alt="To Instagram"/>
+         <img class="svg" src="./src/public/tiktok.svg" alt="To TikTok"/>
+      </div>
+   </nav>
 </header>
 <section class="hero container">
    <div class="text-container">
