--- a/HCM-Portfolio/index.html
+++ b/HCM-Portfolio/index.html
@@ -9,11 +9,14 @@
 <body>
 <header>
    <nav class="navbar">
-      <div class="navbar-left"><h6>JONAS</h6> </div>
-      <div class="navbar-middle"><h6>DENTIST</h6> </div>
+      <div class="navbar-left"><h6>JONAS</h6></div>
+      <div class="navbar-middle"><h6>DENTIST</h6></div>
       <div class="navbar-right">
-         <img class="svg" src="./src/public/instagram.svg" alt="To Instagram"/>
-         <img class="svg" src="./src/public/tiktok.svg" alt="To TikTok"/>
+         <a href="https://instagram.com" target="_blank" rel="noopener noreferer">
+            <img class="svg" src="./src/public/instagram.svg" alt="To Instagram"/></a>
+         <a href="https://tiktok.com" target="_blank" rel="noopener noreferer">
+            <img class="svg" src="./src/public/tiktok.svg" alt="To TikTok"/>
+         </a>
       </div>
    </nav>
 </header>
