--- a/HCM-Portfolio/index.html
+++ b/HCM-Portfolio/index.html
@@ -20,14 +20,18 @@
       </div>
    </nav>
 </header>
-<section class="hero container">
-   <div class="text-container">
-      <h1>Hero Section</h1>
+<section class="hero-section">
+   <div class="content-container">
+      <div class="text-container">
+         <h3>Hello</h3>
+         <h1>I'm Jonas</h1>
+      </div>
+      <a href="#aboutme">About Me</a>
    </div>
 </section>
 <main>
    <section class="aboutme">
-      <h3>About Me</h3>
+      <h3 id="aboutme">About Me</h3>
       <div class="cards-container">
          <div class="card-left">
             left
