Hero-Section: Button

--- a/HCM-Portfolio/index.html
+++ b/HCM-Portfolio/index.html
@@ -26,7 +26,7 @@
          <h3>Hello</h3>
          <h1>I'm Jonas</h1>
       </div>
-      <a href="#aboutme">About Me</a>
+      <div class="btn-container"><a class="btn-cta" href="#aboutme">About Me</a></div>
    </div>
 </section>
 <main>
