--- a/HCM-Portfolio/index.html
+++ b/HCM-Portfolio/index.html
@@ -34,10 +34,11 @@
       <h3 id="aboutme">About Me</h3>
       <div class="cards-container">
          <div class="card-left">
-            left
+            <img src="./src/public/i-dental.svg" alt="I-Dental Logo"/>
          </div>
          <div class="card-right">
-            right
+            <h6>I'm a Dentist</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate delectus error ex quam, reiciendis saepe soluta veritatis. Adipisci animi consequuntur cupiditate, doloribus earum est eveniet exercitationem fugiat illo, labore laborum maiores necessitatibus obcaecati officia placeat quaerat quis quisquam repudiandae sequi vero. Corporis in nemo non quas quos tenetur ullam velit?</p>
          </div>
       </div>
    </section>
